--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="G3MXEijPY7KZc0K0F3AnhlmBd53-gVh9QkObNiRVlEw" />
   <title>SVG TO Data URI</title>
   <meta name="description" content="Free online tool to convert SVG code into Data URI format, optimized for CSS and HTML usage. Fast, clean and offline-ready.">
   <meta name="keywords" content="SVG to Data URI, SVG Converter by W-ilyas, SVG converter, SVG base64, online svg tool, svg encoder, data URI, svg encoder online, svg in CSS">
