--- a/index.html
+++ b/index.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="G3MXEijPY7KZc0K0F3AnhlmBd53-gVh9QkObNiRVlEw" />
+  <meta name="google-site-verification" content="G3MXEijPY7KZc0K0F3AnhlmBd53-gVh9QkObNiRVlEw" />
+  
   <title>SVG TO Data URI</title>
+  
   <meta name="description" content="Free online tool to convert SVG code into Data URI format, optimized for CSS and HTML usage. Fast, clean and offline-ready.">
   <meta name="keywords" content="SVG to Data URI, SVG Converter by W-ilyas, SVG converter, SVG base64, online svg tool, svg encoder, data URI, svg encoder online, svg in CSS">
   <meta name="author" content="Ilyas">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://ilyas.github.io/svg-uri-tool/">
+  <link rel="canonical" href="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/">
 
   <!-- Open Graph for preview in social platforms -->
   <meta property="og:title" content="SVG to Data URI Converter">
   <meta property="og:description" content="Convert your SVG code into a compact Data URI format instantly.">
-  <meta property="og:image" content="preview.png">
+  <meta property="og:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ilyas.github.io/svg-uri-tool/">
+  <meta property="og:url" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="SVG to Data URI Converter">
   <meta name="twitter:description" content="Convert your SVG code into a Data URI format in one click.">
-  <meta name="twitter:image" content="preview.png">
+  <meta name="twitter:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.png">
 
-  <!-- Favicon -->
-<!-- Favicon 180px for Apple -->
-<link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
-
-<!-- Favicon 512px for Android / PWA -->
-<link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png">
+  <!-- Favicon (keep your current) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png">
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
