--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Open Graph for preview in social platforms -->
   <meta property="og:title" content="SVG to Data URI Converter">
   <meta property="og:description" content="Convert your SVG code into a compact Data URI format instantly.">
-  <meta property="og:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.png">
+  <meta property="og:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/">
 
