--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="SVG to Data URI Converter">
   <meta name="twitter:description" content="Convert your SVG code into a Data URI format in one click.">
-  <meta name="twitter:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.png">
+  <meta name="twitter:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview-img.jpg">
 
   <!-- Favicon (keep your current) -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
