--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </p>
 
   <p>To display your SVG in an <code>&lt;img&gt;</code> tag, use this format:</p>
-  <pre><code>&lt;img class="svg-img custom-icon" data-src="icon.txt"&gt;</code></pre>
+  <pre><code>&lt;img class="svg-img" data-src="icon.txt"&gt;</code></pre>
 
   <p>
     Then add this JavaScript snippet to your page to load the external SVG correctly:
