--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="file-name" id="file-name-display">-No file chosen-</div>
         </div>
         <div>
-          <label for="svg-input">Or paste SVG code here</label>
+          <label class="input-panel-text" for="svg-input">Or paste SVG code here</label>
           <textarea id="svg-input" placeholder="<!-- Enter SVG code here --><svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'><path d='M12 2L2 12h3v8h6v-6h2v6h6v-8h3L12 2z'/></svg>"></textarea>
         </div>
         <div class="buttons">
