--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ document.querySelectorAll('.svg-img').forEach(img =&gt; {
 </section>
 
   <footer class="container">
-    <p>SVG to Data URI Converter - Built for easy SVG text file storage - <strong>Powered by W-Ilyas</strong></p>
+    <p class="footer-text">SVG to Data URI Converter - Built for easy SVG text file storage - <strong>Powered by W-Ilyas</strong></p>
   </footer>
 
   <script src="script.js"></script>
