--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ document.querySelectorAll('.svg-img').forEach(img =&gt; {
   <p>
     To apply custom styles to each SVG image, simply add a unique class to your <code style="color: #00D200;">&lt;img&gt;</code> tag and define its styles in your CSS:
   </p>
-  <pre><code style="color: #00D200;">&lt;img class="svg-img my-icon" data-src="icon.txt"&gt;</code></pre>
+  <pre><code style="color: #04b504;">&lt;img class="svg-img my-icon" data-src="icon.txt"&gt;</code></pre>
   <pre><code style="color: #0098FD;">/* CSS */
 .my-icon {
   width: 40px;
