--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- صفحة الانتظار -->
+  <div id="preloader">
+    <div class="loader">
+      <img class="load-logo" src="W-LOGO.svg" alt="W-LOGO">
+      <img src="load.svg" alt="load">
+    </div>
+  </div>
+
   <header>
     <div class="container">
       <h1>SVG to Data URI</h1>
