--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#3A79E1">
 </head>
 <body>
     <!-- صفحة الانتظار -->
@@ -202,5 +204,12 @@ document.querySelectorAll('.svg-img').forEach(img =&gt; {
   </footer>
 
   <script src="script.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log("✅ Service Worker Registered"))
+        .catch(error => console.error("Service Worker Error:", error));
+    }
+  </script>
 </body>
 </html>
