--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#0E1116">
+  <meta name="theme-color" content="#101B39">
 </head>
 <body>
     <!-- صفحة الانتظار -->
