--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
+
+  <!-- Main manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#101B39">
 </head>
 <body>
-    <!-- صفحة الانتظار -->
+    <!-- Download page -->
   <div id="preloader">
     <div class="loader">
       <img class="load-logo" src="W-LOGO.svg" alt="W-LOGO">
