--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@ document.querySelectorAll('.svg-img').forEach(img =&gt; {
     const isOnline = navigator.onLine || forceOnline;
     
     if (isOnline) {
-      indicator.textContent = '🟢 متصل';
+      indicator.textContent = '🟢 Online';
       indicator.style.backgroundColor = '#4CAF50';
       indicator.style.color = 'white';
     } else {
-      indicator.textContent = '🔴 غير متصل';
+      indicator.textContent = '🔴 Ofline';
       indicator.style.backgroundColor = '#f44336';
       indicator.style.color = 'white';
     }
