--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="G3MXEijPY7KZc0K0F3AnhlmBd53-gVh9QkObNiRVlEw" />
   
@@ -12,6 +12,14 @@
   <meta name="author" content="Ilyas">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/">
+
+  <!-- PWA Meta Tags -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="SVG URI">
+  <meta name="msapplication-TileColor" content="#101B39">
+  <meta name="msapplication-tap-highlight" content="no">
 
   <!-- Open Graph for preview in social platforms -->
   <meta property="og:title" content="SVG to Data URI Converter">
@@ -26,14 +34,16 @@
   <meta name="twitter:description" content="Convert your SVG code into a Data URI format in one click.">
   <meta name="twitter:image" content="https://ilyasbrahim520.github.io/SVG-TO-DATA-URI-BY-W-ilyas/preview.png">
 
-  <!-- Favicon (keep your current) -->
+  <!-- Favicon and Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
   <link rel="icon" type="image/png" sizes="512x512" href="favicon-512.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="mask-icon" href="favicon.png" color="#101B39">
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Main manifest -->
+  <!-- PWA Manifest -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#101B39">
 </head>
